--- a/ansible/playbooks/k3s/05_join_agents.yaml
+++ b/ansible/playbooks/k3s/05_join_agents.yaml
@@ -4,7 +4,7 @@
   become: yes
   vars_files:
     - ../../group_vars/agents.yml
-    - ../../{{ env }}/secrets.yml
+    - ../../secrets_{{ env }}.yml
   tasks:
     - name: Debug variables
       debug:
@@ -12,7 +12,7 @@
           - "Server address: {{ private_ips.mainServer }}"
     - name: Start and init the agents
       shell: |
-        curl -sfL https://get.k3s.io | sh -s - agent \
+        curl -sfL https://get.k3s.io | INSTALL_K3S_VERSION=v1.30.5+k3s1 sh -s - agent \
           --server https://{{ private_ips.mainServer }}:6443 \
           --node-name="$(hostname -f)" \
           --flannel-iface=enp7s0 \
